# gst-plugin-flycap

./: COPYING  EclipseSymbolsAndIncludePaths.xml  Makefile  README  configure.ac
src/: Makefile  Makefile.am  gstflycapsrc.c  gstflycapsrc.h  gstplugin.c  libflycapplugin.la  libflycapplugin_la-gstflycapsrc.lo  libflycapplugin_la-gstplugin.lo
src/.libs/: libflycapplugin.lai
